TAG: qcreports_db-5-1-4-4
DATE: 08/08/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/07/14/2013 to exclusion list

TAG: qcreports_db-5-1-4-3
DATE: 07/25/2013
STAFF: sc
CHANGES: TR11398
1) added weekly/GXD_DuplicateSpecimenLabel.sql
2) qcr.html - added above 

TAG: qcreports_db-5-1-4-2
DATE: 07/16/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/07/14/2013 to exclusion list

TAG: qcreports_db-5-1-4-1
DATE: 06/27/2013
STAFF: sc	
CHANGES: qcr.html - update orthologyload to homologyload

TAG: qcreports_db-5-1-3-3
DATE: 06/07/2013
STAFF: lec
CHANGES: 
TR11383/bobs reports
1) MGI_ComprehensiveMarkerSequence.py
2) SEQ_RepTransGenomic.py
TR11378/mgd/GXD_LackingImages.py
TR11253/mgd/PRB_StrainByDate.sql: add 'mberry'/06/10/2013 to exclusion list

TAG: qcreports_db-5-1-3-2
DATE: 05/13/2013
STAFF: dbm
CHANGES: TR11369
1) added mgd/GXD_ImageSpecimen.py

TAG: qcreports_db-5-1-3-1
DATE: 04/16/2013
STAFF: sc
CHANGES: N2MO merge tr6519 changes to trunk

TAG: qcreports_db-5-1-2-7
TAG: qcreports_db-5-1-2-6
DATE: 03/21/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/03/21/2013 to exclusion list

TAG: qcreports_db-5-1-2-5
DATE: 02/19/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/02/20/2013 to exclusion list

TAG: qcreports_db-5-1-2-4
DATE: 01/30/2013
STAFF: lec
CHANGES:  addeed htmpload to qcr.html

TAG: qcreports_db-tr6519-1
DATE: 01/25/2013
STAFF: sc
CHANGES:
1) added three new homology reports MRK_Homology_Class*.py
2) qcr.html - added new homology section and three new reports

TAG: qcreports_db-tr6519-BP
DATE: 01/24/2013
STAFF: sc
CHANGES: branch point tag for N2MO project

TAG: qcreports_db-5-1-2-3
TAG: qcreports_db-5-1-2-2
TAG: qcreports_db-5-1-2-1
DATE: 01/07/2013, 01/09/2013, 01/14/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/01/15/2013 to exclusion list
mgd/PRB_StrainByDate.sql: add 'mberry'/01/04/2013 to exclusion list