@@ -270,6 +270,15 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GIA_MRK_ENSEMBL.rpt">Ensembl Associations for Gene Index</A> <B>(yz)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/GIA_MRK_Sequence.rpt">Sequence Associations for Gene Index</A> <B>(yz)</B>
 <LI><A HREF="/data/reports/reports_db/output/MGI_BioTypeConflict.rpt">MGI Biotype Conflict Public Report</A> <B>(cjb)</B>
+<LI>QTL Reports
+    <OL>
+    <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_1.rpt">QTL markers that have no mapping and no allele associations</A> <B>(djr)</B>
+    <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_2.rpt">QTL markers that have mapping but no allele associations</A> <B>(djr)</B>
+    <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_3.rpt">QTL markers that have no mapping but have allele associations</A> <B>(djr)</B>
+    <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_4.rpt">QTL markers that have assigned reference of J:23000 or J:85000</A> <B>(djr)</B>
+    <!--this report is intentionally commented out; see Deb for details-->
+    <!--<LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_5.rpt">QTL markers that are in Nomen and have not been broadcast</A> <B>(djr)</B>-->
+    </OL>
 </OL>
 
 <A NAME="sequence"><B>Sequences (rmb, cjb, djr, yz)</B></A>
